--- a/exercise1/FORM/ex1.htm
+++ b/exercise1/FORM/ex1.htm
@@ -6,49 +6,49 @@
 </head>
 <body>
     <h3>人生調查表</h3>
-        姓名:<input name="name" type="text">
-        性別:<input name="sexual" type="radio" value="男">
-             <input name="sexual" type="radio" value="女">
+        姓名:<input name="name" type="text"><br>
+        性別:<input name="sexual" type="radio" value="男">男
+             <input name="sexual" type="radio" value="女">女
     <hr>
-        年齡:<input name="age" type="range" min="0" max="150">
-        生日:<input name="birthday" type="date">
+        年齡:<input name="age" type="number" min="0" max="150"><br>
+        生日:<input name="birthday" type="date"><br>
         職業:
-        <input name="occupation" type="checkbox" value="軍人">
-        <input name="occupation" type="checkbox" value="公務人員">
-        <input name="occupation" type="checkbox" value="老師">
-        <input name="occupation" type="checkbox" value="商人">
-        <input name="occupation" type="checkbox" value="職員">
-        <input name="occupation" type="checkbox" value="科技業">
-        <input name="occupation" type="checkbox" value="自由業">
-        <input name="occupation" type="checkbox" value="其他">
+        <input name="occupation" type="checkbox" value="軍人">軍人
+        <input name="occupation" type="checkbox" value="公務人員">公務人員
+        <input name="occupation" type="checkbox" value="老師">老師
+        <input name="occupation" type="checkbox" value="商人">商人
+        <input name="occupation" type="checkbox" value="職員">職員
+        <input name="occupation" type="checkbox" value="科技業">科技業
+        <input name="occupation" type="checkbox" value="自由業">自由業
+        <input name="occupation" type="checkbox" value="其他">其他<br>
         是否結婚:
-        <input name="marraige" type="radio" value="是">
-        <input name="marraige" type="radio" value="否">
+        <input name="marraige" type="radio" value="是">是
+        <input name="marraige" type="radio" value="否">否<br>
     <hr>
         興趣:
-        <input name="hobby" type="checkbox" value="唱歌">
-        <input name="hobby" type="checkbox" value="跳舞">
-        <input name="hobby" type="checkbox" value="玩音樂">
-        <input name="hobby" type="checkbox" value="打電腦">
-        <input name="hobby" type="checkbox" value="追星">
-        <input name="hobby" type="checkbox" value="看劇">
-        <input name="hobby" type="checkbox" value="運動">
-        <input name="hobby" type="checkbox" value="拍影片">
-        <input name="hobby" type="checkbox" value="打毛線">
-        <input name="hobby" type="checkbox" value="吃美食">
-        <input name="hobby" type="checkbox" value="其他">
+        <input name="hobby" type="checkbox" value="唱歌">唱歌
+        <input name="hobby" type="checkbox" value="跳舞">跳舞
+        <input name="hobby" type="checkbox" value="玩音樂">玩音樂
+        <input name="hobby" type="checkbox" value="打電腦">打電腦
+        <input name="hobby" type="checkbox" value="追星">追星
+        <input name="hobby" type="checkbox" value="看劇">看劇
+        <input name="hobby" type="checkbox" value="運動">運動
+        <input name="hobby" type="checkbox" value="拍影片">拍影片
+        <input name="hobby" type="checkbox" value="打毛線">打毛線
+        <input name="hobby" type="checkbox" value="吃美食">吃美食
+        <input name="hobby" type="checkbox" value="其他">其他<br>
         夢想:
-        <input name="dream" type="checkbox" value="成為總統">
-        <input name="dream" type="checkbox" value="當太空人">
-        <input name="dream" type="checkbox" value="變成有錢人">
-        <input name="dream" type="checkbox" value="當歌手">
-        <input name="dream" type="checkbox" value="國際巨星">
-        <input name="dream" type="checkbox" value="成為模特爾">
-        <input name="dream" type="checkbox" value="當老師">
-        <input name="dream" type="checkbox" value="其他">
+        <input name="dream" type="checkbox" value="成為總統">成為總統
+        <input name="dream" type="checkbox" value="當太空人">當太空人
+        <input name="dream" type="checkbox" value="變成有錢人">變成有錢人
+        <input name="dream" type="checkbox" value="當歌手">當歌手
+        <input name="dream" type="checkbox" value="國際巨星">國際巨星
+        <input name="dream" type="checkbox" value="成為模特爾">成為模特爾
+        <input name="dream" type="checkbox" value="當老師">當老師
+        <input name="dream" type="checkbox" value="其他">其他<br>
     <hr>
-        實現了嗎?<input name="trfal" type="radio" value="是">
-                <input name="trfal" type="radio" value="否">
+        實現了嗎?<input name="trfal" type="radio" value="是">是
+                <input name="trfal" type="radio" value="否">否<br>
     <input type="submit" value="提交問卷">
     </body>
 </html>
