--- a/exercise1/FORM/ex1.htm
+++ b/exercise1/FORM/ex1.htm
@@ -5,6 +5,7 @@
     <tltle>問卷調查表</tltle>
 </head>
 <body>
+<form>
     <h3>人生調查表</h3>
         姓名:<input name="name" type="text"><br>
         性別:<input name="sexual" type="radio" value="男">男
@@ -50,5 +51,6 @@
         實現了嗎?<input name="trfal" type="radio" value="是">是
                 <input name="trfal" type="radio" value="否">否<br>
     <input type="submit" value="提交問卷">
+</form>
     </body>
 </html>
