--- a/exercise1/USE.htm
+++ b/exercise1/USE.htm
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="TRY.css">
+<link rel="stylesheet" type="text/css" href="USE.css">
 <h2 id="title">慣用樣式表</h2>
 	<ul>
 		<li>TESE1</li>
