--- a/Bootstrap.htm
+++ b/Bootstrap.htm
@@ -6,25 +6,25 @@
 		<li>TEST3</li>
 		<li>TEST4</li>
 	</ul>
-	<table>
+	<table class="table">
 		<caption>樣式表</caption>
 		<tr class="t1">
-			<th>誰的家
-			<th>我家
-			<th>你家
-			<th>他家
+			<th scope="col">誰的家
+			<th scope="col">我家
+			<th scope="col">你家
+			<th scope="col">他家
 		<tr class="t2">
-			<th>狗狗
+			<th scope="row">狗狗
 			<td>1隻
 			<td>2隻
 			<td>3隻
 		<tr class="t2">
-			<th>貓貓
+			<th scope="row">貓貓
 			<td>3隻
 			<td>2隻
 			<td>1隻
 		<tr class="t2">
-			<th>恐龍
+			<th scope="row">恐龍
 			<td>2隻
 			<td>1隻
 			<td>4隻
