--- a/Bootstrap.htm
+++ b/Bootstrap.htm
@@ -80,10 +80,10 @@
 
 
 <h2>歡迎來到昱雅的網站</h2>
-<p>金門大學資工一年級</p>
-<p>朋友是一隻牛</p>
-<p>口頭禪是幹</p>
-<p>我的世界裡充滿了很多這種東西</p>
+<p class="card-text mb-auto">金門大學資工一年級</p>
+<p class="card-text mb-auto">朋友是一隻牛</p>
+<p class="card-text mb-auto">口頭禪是幹</p>
+<p class="card-text mb-auto">我的世界裡充滿了很多這種東西</p>
 <h3>陷阱妹</h3>
 
 <img src="https://i.kfs.io/article5/global/21,7147,2v1/original.jpg" width="500" heigh="250">
