--- a/HW3/3-29.htm
+++ b/HW3/3-29.htm
@@ -38,9 +38,9 @@
 		}
 		.div1
 		{
-			position:fixed;
+			position:float;
 			top:50px;
-			width:200px;
+			width:20px;
 			height:5000px;
 		}	
 		.div2
@@ -51,6 +51,7 @@
 		}
 		button
 		{
+		
 		font-family:monospace;
 		font-size:35px;
 		margin:0px;
@@ -92,18 +93,18 @@
 		}
 		
 
-		@media only screen and (max-width: 600px) {
+		
     		.div1{
 			overflow:hidden;
 			width:90px;		
     		}
 		.div1:hover
-			{
+		{
 			position:fixed;
 			top:50px;
 			width:200px;
 			height:5000px;
-			transition: transform 2s;
+			transition: width 0.5s;
 	
 		}
 		
@@ -130,88 +131,7 @@
 		<li class="list1"><a href="https://www.youtube.com/channel/UC6SeKyYGmo9qjIb8ekPlncw">美秀集團</a></li>
 		<li class="list1"><a href="https://www.youtube.com/user/monstersandmen">Of monster and men</a></li>
 		<li class="list1"><a href="https://www.youtube.com/channel/UCYAyQjEhGHKARXnZe0U__9g">草東沒有派對</a></li>
-	</ul></div>
-	<pre>
-	我的另類羅曼史
-維基百科，自由的百科全書
-跳至導覽跳至搜尋
-MCR-logo.png
-我的另類羅曼史
-My Chemical Romance BDO Feb 4 07 6.jpg
-組合
-暱稱	MCR
-音樂類型	另類搖滾
-Emo
-流行朋克
-後硬核
-龐克搖滾
-出道地點	美國紐澤西
-活躍年代	2001年-2013年
-唱片公司	Eyeball Records（2001年—2003年）
-Reprise Records（2003年-2013年）
-網站	www.mychemicalromance.com
-已離開成員
-傑洛德·威(Gerard Way)
-米基·威(Mikey Way)
-法蘭克·伊羅(Frank Iero)
-睿·托羅(Ray Toro)
-麥特·派利席爾(Matt Pelissier)
-巴柏·布萊亞(Bob Bryar)
-我的另類羅曼史（My Chemical Romance，簡稱MCR）是一組來自美國紐澤西的搖滾樂團，成立於2001年，解散於2013年。在樂隊的大部分時間，樂隊由傑洛德·威（Gerard Way，主唱）、米基·威（Mikey Way，貝斯手）、法蘭克·伊羅（Frank Iero，節奏吉他）、睿·托羅（Ray Toro，主吉他手）和巴柏·布萊亞（Bob Bryar，鼓手）五人組成。樂團成員大多來自紐澤西，只有鼓手巴柏·布萊亞來自芝加哥。樂團的名稱是貝斯手米基·威從《Ecstasy: Three Tales of Chemical Romance》書名取得靈感。
-
-在樂隊成立後不久即與Eyeball Records唱片公司簽約，並在2002年發布了他們的第一部專輯《子彈換愛》（I Brought You My Bullets, You Brought Me Your Love）。2003年樂隊與Reprise Records唱片公司簽約，2004年發布專輯《甜蜜的復仇》（Three Cheers for Sweet Revenge）。《甜蜜的復仇》在銷量獲得一定成功，在其發布一年多後被認定為白金唱片。2006年，樂隊發布了專輯《黑暗行軍》，並獲得了較大的成功。總的來說，這部專輯受到了音樂評論家稱讚。2010年樂隊發布了專輯《危險時刻：掃興俠的真實人生》（Danger Days: The True Lives of the Fabulous Killjoys），此專輯亦獲得了積極的評價。樂隊的最後發布的作品是一系列的單曲，總共用了5個月發布，收錄在合集《常規武器》（Conventional Weapons）中。樂隊在《常規武器》完全發布結束後一個月宣布解散。2014年樂隊發布了一個熱門歌曲合集《勇者無懼》（May Death Never Stop You）。
-
-
-目錄
-1	樂團傳記
-1.1	早期發展（2001年—2002年）
-1.2	進軍主流和《甜蜜的復仇》（2003年—2005年）
-1.3	《黑暗行軍》（2006年—2007年）
-1.4	《危險時刻：掃興俠的真實人生》（2009年-2011年）
-1.5	《常規武器》和解散（2011年—2013年）
-2	作品
-2.1	專輯
-2.2	單曲
-3	注釋
-4	外部連結
-樂團傳記
-早期發展（2001年—2002年）
-主唱傑洛德·威和前鼓手麥特·派利席爾在911事件後的一個禮拜左右成立了樂團。傑洛德親眼見到飛機撞擊世界貿易中心，這個經驗讓他決定要組成樂團。傑洛德寫了一首歌《天際線與旋轉門》（Skylines and Turnstiles），表達他對911事件的感受。不久之後，傑洛德邀請主吉他手睿·托羅加入樂團，因為傑洛德認為自己雖然會唱歌，但吉他的演奏能力不如睿·托羅。[1]
-
-樂團第一次的錄音在麥特家中的閣樓進行，錄製了兩首歌曲，分別是《七苦聖母》（Our Lady of Sorrows）[後來改名為《拿來更多匕首》（Bring More Knives）]和《小室》（Cubicles）。傑洛德的弟弟米基·威在非常喜歡這兩首歌的試聽帶（demo），因此決定去學習彈奏貝斯，並加入樂團。[1]
-
-之後，我的另類羅曼史被「Eyeball」唱片公司簽下，並和 Pencey Prep 與星期四樂團（Thursday）一起共用練團室。他們也是在這裡遇見 Pencey Prep 樂團的主唱兼吉他手—法蘭克·伊羅。在 Pencey Prep 於2001年或2002年解散後，法蘭克成為我的另類羅曼史的吉他手，剛好就在他們的首張專輯開始錄音的前一天。[1]
-
-樂團組成的三個月後，他們錄製了首張專輯《I Brought You My Bullets, You Brought Me Your Love》（子彈換愛），於2002年由 Eyeball 唱片公司發行。雖然是在開始錄音的前幾天才加入樂團，但法蘭克·伊羅負責專輯中兩首歌曲的演奏，其中之一為《門羅維爾的早早日落》（Early Sunsets Over Monroeville）。
-
-進軍主流和《甜蜜的復仇》（2003年—2005年）
-在2003年，樂團和 Reprise 唱片公司簽約。他們隨著七級煉獄樂團（Avenged Sevenfold）進行巡迴演出，並開始籌備第二張專輯《甜蜜的復仇》（Three Cheers for Sweet Revenge）。這張專輯於2004年發行，並在該年度內達到白金唱片的銷售量（超過一百萬張）。在這張專輯中他們發行了三張單曲：《我不好（我保證）》[I'm Not Okay/I Promise]、《海倫娜》（Helena）和《你的靈魂》（The Ghost of You）。
-
-樂團在2004年8月於日本演出後，新的鼓手巴柏·布萊亞（Bob Bryar）取代了原本的麥特·派利席爾。麥特之所以離開樂團，是因為和樂團成員睿·托羅之間的協議，或是在現場演出時失誤。
-
-2005年開始，樂團直接參與第一次的「Taste of Chaos」演唱活動，並且擔任年輕歲月（Green Day）樂團「美國大白癡」（American Idiot）巡迴演唱會的開場來賓。之後我的另類羅曼史也展開了自己的美國巡迴演出。
-
-在同一年，我的另類羅曼史和二手貨樂團（The Used）合作，共同錄製了向大衛·鮑伊以及皇后合唱團（Queen）致敬的經典單曲《壓力之下》（Under Pressure），在 iTunes Store 和其他網路音樂商店中發售。
-
-《黑暗行軍》（2006年—2007年）
-在2006年3月21日（美國，台灣則於5月12日發行），包含兩片DVD及一片CD的套裝專輯《兇案現場日誌》（Life on the Murder Scene）發行。第一片DVD中收錄了樂團的歷史記錄，第二片則收錄了音樂錄影帶、拍攝製作過程，以及多場現場演出片段。此外在2006年6月27日，一張未經授權的傳記DVD《Things That Make You Go MMM!》發行。這片DVD實際上並未收錄任何關於我的另類羅曼史的音樂或表演，而是幾段專訪，訪問的對象是在該樂團成名以前就認識他們的人。[2]
-
-我的另類羅曼史在2006年4月10日開始錄製他們的新專輯，並與曾擔任年輕歲月（Green Day）多張專輯製作人的羅柏·卡瓦洛（Rob Cavallo）一起合作。[3][4]
-
-專輯的名稱原本被認為是《我的另類羅曼史之起落》（The Rise and Fall of My Chemical Romance），不過在《Kerrang!》的專訪中傑洛德表示，這只是專輯的製作代稱，他說「這絕對不是專輯的名稱，只是開玩笑的而已」[5][6]
-
-在2006年8月23日，《黑暗行軍》（The Black Parade）專輯中的兩支單曲《Welcome to the Black Parade》（黑暗行軍）和《Famous Last Words》（最後遺言）的音樂綠影帶拍攝完成，預計在2007年1月22日推出。[7]音樂錄影帶的導演是山姆·貝爾，他曾指導過超脫合唱團（Nirvana）的《Smells Like Teen Spirit》和年輕歲月的《American Idiot》兩支音樂錄影帶。[8]
-
-在拍攝《Famous Last Words》音樂錄影帶期間，主唱傑洛德和鼓手巴柏受了傷。傑洛德的腳踝韌帶斷裂，這是由於法蘭克·伊羅在拍攝中途撲到傑洛德身上並把他推倒引致。而巴柏的腿被火焰灼傷，其後更受到葡萄球菌的感染，需要住院接受觀察。兩人的受傷讓樂團取消了好幾場演出。有許多的報導指出這些傷害是因為車禍造成，而根據樂團在 MySpace 網站的官方聲明，他們是在音樂錄影帶拍攝現場受的傷。[9]
-
-專輯《黑暗行軍》（The Black Parade）分別於2006年10月23日和24日在英國及美國發行。 台灣隨後於2006年10月27日發行。[10]
-
-《危險時刻：掃興俠的真實人生》（2009年-2011年）
-2009年2月1日，我的另類羅曼史發布了一個名為《荒蕪小巷》(Desolation Row)的新單曲（為鮑勃·迪倫歌曲的翻唱），作為同年電影《守望者》的片尾曲。
-
-我的另類羅曼史的最後一張錄音室專輯是《危險時刻：掃興俠的真實人生》（Danger Days: The True Lives Of The Fabulous Killjoys）。
-
-《常規武器》和解散（2011年—2013年）
-樂隊於2013年3月23日宣布解散,結束12年的生涯。
-	</pre>
+	</ul>
+	</div>
+	
 </body>
