--- a/exercise/FINALEXAM/NEW.htm
+++ b/exercise/FINALEXAM/NEW.htm
@@ -296,7 +296,7 @@
 	
 			
 	</div>
-	<img id="top" src="IMG_1562.png"></img>
+	<img id="top" src="IMG_1562.PNG"></img>
 	<img id="lefticon" onclick="location.href='mystory.htm'" src="ezgif-1-baba3941749a.gif"></img>
 	<img id="righticon" onclick="location.href='news.htm'" src="ezgif-1-bd60f29cbab0.gif"></img>
 	
