--- a/exercise/FINALEXAM/mystory.htm
+++ b/exercise/FINALEXAM/mystory.htm
@@ -74,6 +74,7 @@
 	height:500px;
 	}
 	#img{
+	float: right;
 	width:40%;
 	height:315px;
 	}
@@ -117,10 +118,16 @@
 	background-color:#FFB7DD;
 	z-index:1;
 	}
+	span
+	{
+	float:left;
+	font-family: Microsoft JhengHei;
+	font-size:16px;
+	}
 	</style>
 </head>
 <body>
-	<img id="top" src="https://i.imgur.com/VE2xm8b.jpg"></img>
+	<img id="top" src="IMG_13443.png"></img>
 	<img id="lefticon" onclick="location.href='news.htm'" src="ezgif-1-baba3941749a.gif"></img>
 	<img id="righticon" onclick="location.href='NEW.htm'" src="ezgif-1-bd60f29cbab0.gif"></img>
 	<div class="blockspace"></div>
@@ -130,33 +137,71 @@
 			<h1 style="font-family: Microsoft JhengHei; position:right;">My Best Friends & Forever </h1>
 			<h3 style="font-family: Microsoft JhengHei;">
 			這些是我的好朋友們<br>
-			從小學到大學<br>
+			從小學到高中<br>
 			希望大家永遠都BFF<br>
+			Sorry，照片我亂找的，大家都是好朋友<br>
+			我覺得可愛的照片我就丟上來紀錄一下了<br>
 			</h3>
 		</div>
 		<div class="blankspace"></div>
 		<div class="block3-2-1">
-		<center>
+		
+		<span>
+		高中時的好朋友，感謝她，雖然常常罵我怪，<br>
+		可是我們總是有志同道合的時候，有時候一起成長，<br>
+		有時候一起罵那些不公不義，有時候會對好聽的歌產生共鳴，<br>
+		也有時候會意見不合吵架，<br>
+		可是我還是很懷念高中時身邊的每個朋友們<br>
+		</span> 
 		<img id="img" src="IMG_0391.JPG"></img>
-		</center>
+		
 		</div>
 		<div class="blankspace"></div>
 		<div class="block3-2-2">
-		<center>
+		
+		<span>
+		我最醜的雙胞胎姊妹<br>
+		高一被各種老師亂認姊妹<br>
+		那時候覺得八七，現在覺得真的很像哈哈哈<br>
+		好險後來換髮型以後就還好了<br>
+		不然我真的哭<br>
+		希望可以一直當不像的雙胞胎姊妹<br>
+		直到她跟劉博宇白頭偕老<br>
+		開玩笑的，劉博宇是哲玄的<br>
+		哲玄說過:"閨蜜的腦公都歸me"<br>
+		</span> 
 		<img id="img" src="IMG_0322.JPG"></img>
-		</center>
+		
 		</div>
 		<div class="blankspace"></div>
 		<div class="block3-2-3">
-		<center>
+		<span>
+		一個很特別的同學<br>
+		她相當的特殊<br>
+		特殊的我難以形容，不過是個好女生<br>
+		她雖然每天都瘋瘋癲癲的<br>
+		常常稱自己是盛世容顏<br>
+		不過她就某方面來說她也是個有想法的女生<br>
+		學測前會一直拿著溜溜球練習的奇葩非她莫屬<br>
+		希望她有一天能如願以償，可以成為溜溜球大師<br>
+		</span> 
 		<img id="img" src="IMG_0432.JPG"></img>
-		</center>
+		
 		</div>
 		<div class="blankspace"></div>
 		<div class="block3-2-4">
-		<center>
+		<span>
+		我國小的好朋友<br>
+		這張照片是我們高中畢業的暑假一起環島的時候拍的<br>
+		環島真的有點累，很開心是跟這個一起長大的朋友完成的<br>
+		我們從國小五年級當朋友，那時候沒想到現在會離的這麼遠<br>
+		有時候真的很感慨，好想再跟我的小學朋友們當同學<br>
+		但我不爭氣，成績差哈哈哈哈哈<br>
+		至少我們不是同學，還是一起念了很多的書<br>
+		討論在不同學校的事、玩了很多的地方、聽了很多音樂<br>
+		</span> 
 		<img id="img" src="IMG_1317.JPG"></img>
-		</center>
+		
 		</div>
 	</div>
 </body>	
