--- a/exercise/FINALEXAM/NEW.htm
+++ b/exercise/FINALEXAM/NEW.htm
@@ -16,35 +16,49 @@
 	var time=0;
 	var ans;
 	function caculate(num){	
-		if(opttem==="1") return;
-		if(str2!=0)return;
-		if(count===0)
+		if(num==='-1')
 		{
-			if(num===".")
-			{	
-				for(var i=0;i<str.length;i++)
-				{
-					if(str[i]===".") not++;	
-				}
-				if(not===0)str+=num;
-			}
-			else str+=num;
+			str="0";
+			str2="0";
+			not=0;
+			opttem='0';
+			count=0;
+			time=0;
+			ans;	
 			document.getElementById("input").value=parseFloat(str);
 		}
-		else if(count===1)
+		else
 		{
-			if(num===".")
-			{	
-				for(var i=0;i<str2.length;i++)
-				{
-					if(str2[i]===".") not++;	
+			if(opttem=="1") return;
+			if(str2!=0)return;
+			if(count===0)
+			{
+				if(num===".")
+				{	
+					for(var i=0;i<str.length;i++)
+					{
+						if(str[i]===".") not++;	
+					}
+					if(not===0)str+=num;
 				}
-				if(not===0)str2+=num;
+				else str+=num;
+				document.getElementById("input").value=parseFloat(str);
 			}
-			else str2+=num;
-			document.getElementById("input").value=parseFloat(str2);
+			else if(count===1)
+			{
+				if(num===".")
+				{	
+					for(var i=0;i<str2.length;i++)
+					{
+						if(str2[i]===".") not++;	
+					}
+					if(not===0)str2+=num;
+				}
+				else str2+=num;
+				document.getElementById("input").value=parseFloat(str2);
+			}
 		}
-	}
+		}
 	function operation(opt){
 		if(str2!=0)return;
 		opttem=opt;
@@ -52,15 +66,22 @@
 		count=1;	
 	}
 	function equal(){
-	if(str2===0)return;
-	if(opttem=="+")ans=parseFloat(str)+parseFloat(str2);
-	else if(opttem=="-")ans=parseFloat(str)-parseFloat(str2);
-	else if(opttem=="*")ans=parseFloat(str)*parseFloat(str2);
-	else if(opttem=="/")ans=parseFloat(str)/parseFloat(str2);
-	str=ans;
-	str2=0;
-	opttem="1";
-	document.getElementById("input").value=ans;
+	
+	
+	
+		if(opttem==1||opttem==0) return;
+		else
+		{
+		if(str2===0)return;
+		if(opttem=="+")ans=parseFloat(str)+parseFloat(str2);
+		else if(opttem=="-")ans=parseFloat(str)-parseFloat(str2);
+		else if(opttem=="*")ans=parseFloat(str)*parseFloat(str2);
+		else if(opttem=="/")ans=parseFloat(str)/parseFloat(str2);
+		str=ans;
+		str2=0;
+		opttem="1";
+		document.getElementById("input").value=ans;
+		}
 	}
 </script>
 <script>
@@ -239,7 +260,7 @@
 	{
 	height:100px;
 	}
-	#but0,#but1,#but2,#but3,#but4,#but5,#but6,#but7,#but8,#but9,#but10,#but11,#but12,#but13,#but14,#but15
+	#butC,#but0,#but1,#but2,#but3,#but4,#but5,#but6,#but7,#but8,#but9,#but10,#but11,#but12,#but13,#but14,#but15
 	{
 	color:white;
 	background-color:#FFB7DD;
@@ -252,7 +273,7 @@
 	font-size:30px; 
 	color:rgba(100%,100%,100%,1);
 	}
-	#but0:hover,#but1:hover,#but2:hover,#but3:hover,#but4:hover,#but5:hover,#but6:hover,#but7:hover,#but8:hover,#but9:hover,#but10:hover,#but11:hover,#but12:hover,#but13:hover,#but14:hover,#but15:hover,#bmi:hover,#pick:hover
+	#butC:hover,#but0:hover,#but1:hover,#but2:hover,#but3:hover,#but4:hover,#but5:hover,#but6:hover,#but7:hover,#but8:hover,#but9:hover,#but10:hover,#but11:hover,#but12:hover,#but13:hover,#but14:hover,#but15:hover,#bmi:hover,#pick:hover
 	{
 	color:#880000;
 	transition: 0.5s;
@@ -296,7 +317,7 @@
 	
 			
 	</div>
-	<img id="top" src="https://a8s287.github.io/wd107b/exercise/FINALEXAM/IMG_1562.png"></img>
+	<img id="top" src="IMG_1562.png"></img>
 	<img id="lefticon" onclick="location.href='mystory.htm'" src="ezgif-1-baba3941749a.gif"></img>
 	<img id="righticon" onclick="location.href='news.htm'" src="ezgif-1-bd60f29cbab0.gif"></img>
 	
@@ -325,7 +346,7 @@
 		<button onclick="caculate('4')" id="but4">4</button><button onclick="caculate('5')" id="but5">5</button><button onclick="caculate('6')" id="but6">6</button><button onclick="operation('-')" id="but11">-</button><br>
 		<button onclick="caculate('7')" id="but7">7</button><button onclick="caculate('8')" id="but8">8</button><button onclick="caculate('9')"id="but9">9</button><button onclick="operation('*')" id="but12">*</button><br>
 		<button onclick="caculate('0')" id="but0">0</button><button onclick="caculate('.')" id="but15">.</button><button onclick="equal()"id="but14">=</button><button onclick="operation('/')" id="but13">/</button><br>
-		
+		<button onclick="caculate('-1')" id="butC">C</button>
 		</center>
 		</div>
 		<div class="blankspace"></div>
