--- a/exercise/FINALEXAM/news.htm
+++ b/exercise/FINALEXAM/news.htm
@@ -58,7 +58,7 @@
 	position:relative;
 	top:500px;
 	left:15%;
-	width:50%;
+	width:60%;
 	height:315px;
 	background-color:#FFB7DD;
 	z-index:1;
@@ -72,7 +72,7 @@
 	position:relative;
 	top:500px;
 	left:5%;
-	width:50%;
+	width:60%;
 	height:315px;
 	background-color:#FFB7DD;
 	z-index:1;
@@ -81,8 +81,8 @@
 	{
 	position:relative;
 	top:500px;
-	left:50%;
-	width:45%;
+	left:35%;
+	width:60%;
 	height:315px;
 	background-color:#FFB7DD;
 	z-index:1;
@@ -92,7 +92,7 @@
 	position:relative;
 	top:500px;
 	left:25%;
-	width:50%;
+	width:60%;
 	height:315px;
 	background-color:#FFB7DD;
 	z-index:1;
@@ -113,6 +113,15 @@
 	bottom:50px;
 	z-index:2;
 	transition:0.5s;
+	}
+	span
+	{
+	float:left;
+	font-family: Microsoft JhengHei;
+	font-size:16px;
+	}
+	iframe{
+	float: right;
 	}
 	</style>
 </head>
@@ -138,26 +147,78 @@
 	</div>
 	<div class="blankspace"></div>
 	<div class="block3-2-1">
-	<center>
+	<span>
+	槍與玫瑰Guns n' Roses<br>
+	這一個傳奇性的樂團<br>
+	不只是音樂本身吸引人<br>
+	而是屬於他們的真實人生也一樣充滿話題性<br>
+	分分合合離離散散來來去去<br>
+	已經是他們樂團最好的寫照<br>
+	主唱高亢又擁有爆炸性的殺人嗓音<br>
+	加上剛硬直爽的搖滾曲風<br>
+	令他們成為一股不可忽視的音樂力量<br>
+	當然他們不用這些話題性<br>
+	光憑音樂就能服征服無數的聽眾<br>
+	暴力、毒品、性侵害<br>
+	這一些都出現在他們的歌曲當中<br>
+	可依然沒有減少他們的歌迷<br>
+	</span>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/1w7OgIMMRc4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</center>
+	
 	</div>
 	<div class="blankspace"></div>
 	<div class="block3-2-2">
-	<center>
+	<span>
+	來自我最愛的樂團，這張專輯是<br>
+	是一個末期癌症病患的自白，一種強烈的情感<br>
+	從音樂迸發，幸福的歌曲都是相似的<br>
+	不幸的歌則各有各的不幸<br>
+	口袋中的厭世腔有氣若游絲的無臉書生<br>
+	有喜怒無常、哭笑不得的瘋狂小丑<br>
+	也有動不動就爆氣的激進魔人<br>
+	陰間使者丟出令牌<br>
+	這次就讓My Chemical Romance 復活<br>
+	請大家併入搖滾歌劇的陣頭<br>
+	走一趟癌症患者的生前與死後，厭世有多空洞<br>
+	積極活著又多不易都無關緊要<br>
+	遺憾總是要惡狠狠地發聲<br>
+	方稱我的另類羅曼史<br>
+	</span>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/RRKJiM9Njr8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<center>
+	
 	</div>
 	<div class="blankspace"></div>
 	<div class="block3-2-3">
-	<center>
+	<span>
+	「草東沒有派對」的歌詞總先戳破美夢<br>
+	他們善用第一人稱敘事呼喚聽眾的切身認同<br>
+	主題多環繞於年輕世代面對社會<br>
+	以及感情所衍生而來的壓抑反抗性格<br>
+	歌詞裡即便唱出期待<br>
+	更唱出期待過後失望的的無力感<br>
+	亦即90群體共同的虛無。他們表示<br>
+	歌詞內容大多都是從自身<br>
+	周遭發生的故事延伸而來<br>
+	再借題發揮、去碰撞當今社會所設下的各種限制<br>
+	並將那些被現實逼迫的無奈化作歌曲。<br>
+	</span>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/On-ndL258DU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<center>
+	
 	</div>
 	<div class="blankspace"></div>
 	<div class="block3-2-4">
-	<center>
+	<span>
+	如同他們其他的創作，OMAM不談愛情<br>
+	他們說故事，用音樂創造一個瑰麗的神祕世界<br>
+	運用不同的自然殂才還有樂器堆疊把你<br>
+	拉進那個冰河依傍高山的北方國度<br>	
+	所以他們家的MV也是大家所期待的<br>
+	充滿的魔力與未知<br>	
+	搭配這次中提到的沙粒銀粉還有水晶<br>	
+	OMAM又創造出一個令人著迷的世界<br>	
+	讓我偷偷期待他們會有接續的故事線。<br>
+	</span>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/XUClIslXKZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<center>
+	
 	</div>
 </body>	
