--- a/exercise/FINALEXAM/mystory.htm
+++ b/exercise/FINALEXAM/mystory.htm
@@ -127,7 +127,7 @@
 	</style>
 </head>
 <body>
-	<img id="top" src="IMG_13443.png"></img>
+	<img id="top" src="https://i.imgur.com/VE2xm8b.jpg"></img>
 	<img id="lefticon" onclick="location.href='news.htm'" src="ezgif-1-baba3941749a.gif"></img>
 	<img id="righticon" onclick="location.href='NEW.htm'" src="ezgif-1-bd60f29cbab0.gif"></img>
 	<div class="blockspace"></div>
