--- a/exercise/FINALEXAM/mystory.htm
+++ b/exercise/FINALEXAM/mystory.htm
@@ -1,4 +1,5 @@
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<title>welcome to my web</title>
 	<style>
@@ -124,10 +125,70 @@
 	font-family: Microsoft JhengHei;
 	font-size:16px;
 	}
+	.blockimg
+	{
+	width:50%;
+	height:auto;
+	}
+	@media only screen and (max-width: 1500px) {
+		.block3-2-1
+		{
+		position:relative;
+		top:500px;
+		left:10%;
+		width:80%;
+		height:500px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		#img{
+		float: right;
+		width:60%;
+		height:auto;
+		}
+		.block3-2-2
+		{
+		position:relative;
+		top:500px;
+		left:10%;
+		width:80%;
+		height:550px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		.block3-2-3
+		{
+		position:relative;
+		top:500px;
+		left:10%;
+		width:80%;
+		height:550px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		.block3-2-4
+		{
+		position:relative;
+		top:500px;
+		left:10%;
+		width:80%;
+		height:500px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		#block3
+		{
+		background-color:#FFCCCC;
+		position:absolute;
+		width:100%;
+		height:3000px;
+		z-index:1;
+		}
+	}
 	</style>
 </head>
 <body>
-	<img id="top" src="https://i.imgur.com/VE2xm8b.jpg"></img>
+	<img id="top" src="IMG_13443.png"></img>
 	<img id="lefticon" onclick="location.href='news.htm'" src="ezgif-1-baba3941749a.gif"></img>
 	<img id="righticon" onclick="location.href='NEW.htm'" src="ezgif-1-bd60f29cbab0.gif"></img>
 	<div class="blockspace"></div>
