--- a/exercise/FINALEXAM/news.htm
+++ b/exercise/FINALEXAM/news.htm
@@ -1,4 +1,5 @@
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<title>welcome to my web</title>
 	<style>
@@ -123,6 +124,86 @@
 	iframe{
 	float: right;
 	}
+	@media only screen and (max-width: 1500px) {
+		.block3-1
+		{
+		width:70%;
+		height:700px;
+		position:absolute;
+		right:15%;
+		background-color:#FFB7DD;
+		color:#FFFFFF;
+		}
+		#block3
+		{
+		background-color:#FFCCCC;
+		position:absolute;
+		width:100%;
+		height:4200px;
+		z-index:1;
+		}
+		.blockimg
+		{
+		width:50%;
+		height:auto;
+		float:left;
+		}
+		h1,h3{
+		float:right;	
+		}
+		.block3-2-1
+		{
+		position:relative;
+		top:500px;
+		left:15%;
+		width:80%;
+		height:615px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		.block3-2-2
+		{
+		position:relative;
+		top:500px;
+		left:15%;
+		width:80%;
+		height:615px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		.block3-2-3
+		{
+		position:relative;
+		top:500px;
+		left:15%;
+		width:80%;
+		height:615px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		.block3-2-4
+		{
+		position:relative;
+		top:500px;
+		left:15%;
+		width:80%;
+		height:615px;
+		background-color:#FFB7DD;
+		z-index:1;
+		}
+		
+		iframe{
+		float: right;
+		width:100%;
+		}
+		.blankspace
+		{
+		height:300px;
+		}
+		span{
+		flaot:right;
+		}
+	}
 	</style>
 </head>
 <body>
@@ -133,6 +214,7 @@
 	<div id="block3">
 		<div class="block3-1">
 			<img class="blockimg" style="float:left;" src="MCR.jpg">
+			<span>
 			<h1 style="font-family: Microsoft JhengHei; position:right;">My Recommendation of Songs</h1>
 			<h3 style="font-family: Microsoft JhengHei;">
 			經典搖滾歌曲推薦如下<br>
@@ -143,6 +225,7 @@
 			都跟我一樣<br>
 			喜歡那些永遠不退流行的好歌<br>
 			</h3>
+			</span>
 		</div>
 	</div>
 	<div class="blankspace"></div>
